--- a/META.yml
+++ b/META.yml
@@ -24,6 +24,7 @@ no_index:
 requires:
   Class::XSAccessor: 1.03
   Guard: 1.01
+  IO::Interface: 0
   IO::Select: 0
   IO::Socket::Multicast: 1.07
   Padre: 0.51
@@ -32,4 +33,4 @@ requires:
   perl: 5.8.0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.05
+version: 0.06
