Import of BRAMBLE/Padre-Plugin-Swarm-0.07 from CPAN.
gitpan-cpan-distribution: Padre-Plugin-Swarm
gitpan-cpan-version:      0.07
gitpan-cpan-path:         BRAMBLE/Padre-Plugin-Swarm-0.07.tar.gz
gitpan-cpan-author:       BRAMBLE
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -23,14 +23,13 @@ no_index:
   junkyard: []
 requires:
   Class::XSAccessor: 1.03
-  Guard: 1.01
-  IO::Interface: 0
+  Graph: 0
   IO::Select: 0
-  IO::Socket::Multicast: 1.07
-  Padre: 0.51
+  IO::Socket::Multicast: 1.11
+  Padre: 0.56
   Params::Util: 1.00
   Text::Patch: 1.04
   perl: 5.8.0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.06
+version: 0.07
