Import of BRAMBLE/Padre-Plugin-Swarm-0.08 from CPAN.
gitpan-cpan-distribution: Padre-Plugin-Swarm
gitpan-cpan-version:      0.08
gitpan-cpan-path:         BRAMBLE/Padre-Plugin-Swarm-0.08.tar.gz
gitpan-cpan-author:       BRAMBLE
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -26,10 +26,11 @@ requires:
   Graph: 0
   IO::Select: 0
   IO::Socket::Multicast: 1.11
+  JSON::XS: 2.26
   Padre: 0.56
   Params::Util: 1.00
   Text::Patch: 1.04
   perl: 5.8.0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.07
+version: 0.08
