--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 ---
 abstract: 'Experimental plugin for collaborative editing'
 author:
-  - 'The Padre development team as listed in Padre.pm'
+  - '-2010 The Padre development team as listed in Padre.pm'
 build_requires:
   ExtUtils::MakeMaker: 6.42
   Test::More: 0.42
@@ -26,11 +26,11 @@ requires:
   Graph: 0
   IO::Select: 0
   IO::Socket::Multicast: 1.11
-  JSON::XS: 2.26
+  JSON: 2.15
   Padre: 0.56
   Params::Util: 1.00
   Text::Patch: 1.04
   perl: 5.8.0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.08
+version: 0.09
