Import of BRAMBLE/Padre-Plugin-Swarm-0.2 from CPAN.
gitpan-cpan-distribution: Padre-Plugin-Swarm
gitpan-cpan-version:      0.2
gitpan-cpan-path:         BRAMBLE/Padre-Plugin-Swarm-0.2.tar.gz
gitpan-cpan-author:       BRAMBLE
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,16 @@
 ---
-abstract: 'Experimental plugin for collaborative editing'
+abstract: 'Experimental plugin for co-operative editing'
 author:
-  - '-2010 The Padre development team as listed in Padre.pm'
+  - '-2011 The Padre development team as listed in Padre.pm'
 build_requires:
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::MakeMaker: 6.59
+  Padre: 0.90
   Test::More: 0.42
 configure_requires:
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::MakeMaker: 6.59
 distribution_type: module
-generated_by: 'Module::Install version 1.01'
+dynamic_config: 0
+generated_by: 'Module::Install version 1.04'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -22,16 +24,17 @@ no_index:
     - t
   junkyard: []
 requires:
+  AnyEvent: 0
   Class::XSAccessor: 1.03
   Graph: 0
-  IO::Select: 0
   IO::Socket::Multicast: 1.11
   JSON: 2.15
-  Padre: 0.56
+  Object::Event: 0
+  Padre: 0.92
   Params::Util: 1.00
   Text::Patch: 1.04
   Wx::Socket: 0
   perl: 5.8.0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.11
+version: 0.2
